fix spacing and add hr to aggReport.html

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -829,9 +829,6 @@ $COLOR_19: #2a6496 !default;
 .top30 {
     margin-top: 30px;
 }
-.top45 {
-    margin-top: 45px;
-}
 .top90 {
     margin-top: 90px;
 }
